--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
-    "antd": "^5.9.2",
+    "@reduxjs/toolkit": "^1.9.6",
+    "antd": "^5.9.4",
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "html-to-text": "^9.0.5",
     "i18next": "^23.5.1",
     "react": "^18.2.0",
@@ -23,7 +25,9 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.2",
     "react-i18next": "^13.2.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "latest",
+    "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
